--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,86 +10,65 @@
         android:id="@+id/uuidTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:text="UUID"
-        app:layout_constraintBottom_toTopOf="@+id/pairedDevicesSpinner"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Spinner
         android:id="@+id/pairedDevicesSpinner"
-        android:layout_width="398dp"
+        android:layout_width="0dp"
         android:layout_height="44dp"
-        android:layout_below="@id/uuidTextView"
-        android:layout_marginTop="36dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/uuidTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ListView
         android:id="@+id/chatHistoryListView"
-        android:layout_width="321dp"
-        android:layout_height="260dp"
-        android:layout_above="@id/connectButton"
-        android:layout_below="@id/pairedDevicesSpinner"
-        android:layout_marginTop="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/messageEditText"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/pairedDevicesSpinner"
+        app:layout_constraintBottom_toTopOf="@id/connectButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pairedDevicesSpinner"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/connectButton"
-        android:layout_width="129dp"
+        android:layout_width="0dp"
         android:layout_height="54dp"
-        android:layout_above="@id/awaitButton"
-        android:layout_marginTop="12dp"
         android:text="Connect"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/awaitButton"
+        app:layout_constraintTop_toBottomOf="@id/chatHistoryListView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sendButton"
-        app:layout_constraintVertical_bias="0.243" />
+        app:layout_constraintEnd_toStartOf="@+id/awaitButton"
+        app:layout_constraintBottom_toTopOf="@id/messageEditText" />
 
     <Button
         android:id="@+id/awaitButton"
-        android:layout_width="143dp"
+        android:layout_width="0dp"
         android:layout_height="51dp"
-        android:layout_above="@id/sendButton"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="32dp"
         android:text="Await connection"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chatHistoryListView"
+        app:layout_constraintStart_toEndOf="@id/connectButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sendButton"
-        app:layout_constraintVertical_bias="0.243" />
+        app:layout_constraintBottom_toTopOf="@id/messageEditText" />
 
     <EditText
         android:id="@+id/messageEditText"
-        android:layout_width="301dp"
+        android:layout_width="0dp"
         android:layout_height="65dp"
-        android:layout_above="@id/sendButton"
         android:hint="Enter message"
-        app:layout_constraintBottom_toTopOf="@+id/sendButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.409"
+        app:layout_constraintTop_toBottomOf="@id/connectButton"
+        app:layout_constraintBottom_toTopOf="@id/sendButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.734" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/sendButton"
-        android:layout_width="226dp"
+        android:layout_width="0dp"
         android:layout_height="54dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="88dp"
         android:text="Send"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
